--- a/src/App.css
+++ b/src/App.css
@@ -50,9 +50,8 @@ input {
 
 .option {
   height: 2rem;
+  border-bottom: 1px solid black;
   width: 175px;
-  border: 1px solid black;
-  border-top: none;
   display: flex;
   justify-content: center;
   cursor: pointer;
@@ -67,6 +66,10 @@ input {
   box-sizing: border-box;
   position: absolute;
   width: 100%;
+  height: 30vh;
+  overflow: scroll;
+  overflow-x: hidden;
+  border: 1px solid black;
   display: none;
 }
 
