--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ input {
   box-sizing: border-box;
   position: absolute;
   width: 100%;
-  height: 30vh;
+  max-height: 30vh;
   overflow: scroll;
   overflow-x: hidden;
   border: 1px solid black;
