--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ input {
   border-radius: 3px;
   width: 175px;
   height: 2rem;
+  padding-left: .75rem;
 }
 
 .row-style{
@@ -53,24 +54,33 @@ input {
   border-bottom: 1px solid black;
   width: 175px;
   display: flex;
-  justify-content: center;
+  padding-left: .75rem;
   cursor: pointer;
-  background-color: white;
+  color: white;
+}
+
+.option:nth-of-type(odd){
+  background-color: rgb(24, 24, 24);
+}
+.option:nth-of-type(even){
+  background-color: rgb(31, 31, 31);
 }
 
 .option:hover {
-  background-color: rgb(234, 234, 234);
+  background-color: rgb(230, 230, 230);
+  color: rgb(69, 69, 255);
 }
 
 .dropdown {
   box-sizing: border-box;
   position: absolute;
   width: 100%;
-  max-height: 30vh;
+  max-height: 25vh;
   overflow: scroll;
   overflow-x: hidden;
   border: 1px solid black;
   display: none;
+  border-radius: 3px;
 }
 
 .dropdown.visible {
