--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,10 @@
   background-color: rgba(171, 167, 167, 0.09);
   padding-left: 0;
   padding-right: 0;
-  margin-left: 10vh;
+  margin-left: 20vh;
   margin-right: 2vh;
   height: 20%;
-}
-
-.ad{
-  margin-top: 3vh;
-  justify-content: center;
+  width: 250px;
 }
 
 .config-title {
@@ -32,13 +28,15 @@ input {
   background: rgba(23, 23, 23, 0.936);
   color: white;
   border-radius: 3px;
-  width: 175px;
-  height: 2rem;
+  font-size: large;
+  width: 190px;
+  height: 45px;
   padding-left: .75rem;
+  margin-top: 2rem;
 }
 
 .row-style{
-  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .linebreak {
@@ -48,12 +46,16 @@ input {
 
 .exchange-table {
   background: gray;
+  margin-left: 3vh;
   margin-top: 3vh;
-  height: 100vh;
+  height: 85vh;
+  width: 75vh;
+  margin-bottom: 5vh;
 }
 
 ::placeholder {
   color: white;
+  font-size: medium;
 }
 
 .option {
@@ -82,12 +84,12 @@ input {
   box-sizing: border-box;
   position: absolute;
   width: 100%;
-  max-height: 25vh;
+  max-height: 24vh;
   overflow: scroll;
   overflow-x: hidden;
   border: 1px solid black;
   display: none;
-  border-radius: 3px;
+  width: 190px;
 }
 
 .dropdown.visible {
@@ -102,4 +104,10 @@ input {
 .display-container {
   justify-content: center;
   display: flex;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
