--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(250, 250, 250);
+}
+
 .header-gap {
   margin-top: 10vh;
 }
@@ -45,12 +49,13 @@ input {
 }
 
 .exchange-table {
-  background: gray;
+  background-color: rgb(245, 245, 245);
   margin-left: 3vh;
   margin-top: 3vh;
-  height: 85vh;
   width: 75vh;
   margin-bottom: 5vh;
+  padding: 0;
+  height: 100px;
 }
 
 ::placeholder {
@@ -76,7 +81,7 @@ input {
 }
 
 .option:hover {
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(220, 220, 220);
   color: rgb(69, 69, 255);
 }
 
@@ -110,4 +115,24 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
+}
+
+.exchangeRows{
+  background-color: rgb(245, 245, 245);
+  border-bottom: 1.5px solid rgb(190, 190, 190)
+}
+
+.exchangeColumns {
+  text-align: right;
+}
+
+.iniColumn {
+  text-align: left;
+  text-indent: 10px;
+}
+
+.exchange-title {
+  text-indent: 10px;
+  padding-top: 10px;
+  font-size: 17px;
 }
