--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,28 @@
 body {
   background-color: rgb(250, 250, 250);
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .header-gap {
-  margin-top: 10vh;
+  margin-top: 5vh;
+  justify-content: center;
+}
+
+a, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: none;
+  color: rgb(26, 126, 207);
+  font-weight: 400;
+}
+
+a:focus {
+  text-decoration: none;
+  color: rgb(26, 168, 207);
 }
 
 .config {
@@ -12,8 +31,8 @@ body {
   background-color: rgba(171, 167, 167, 0.09);
   padding-left: 0;
   padding-right: 0;
-  margin-left: 20vh;
-  margin-right: 2vh;
+  /*margin-left: 20vh;
+  margin-right: 2vh;*/
   height: 20%;
   width: 250px;
 }
@@ -21,6 +40,8 @@ body {
 .config-title {
   text-align: left;
   margin-left: .5rem;
+  font-weight: 600;
+  padding-top: 10px;
 }
 
 input {
@@ -51,11 +72,11 @@ input {
 .exchange-table {
   background-color: rgb(245, 245, 245);
   margin-left: 3vh;
+  margin-right: 3vh;
+  max-width: 80%;
   margin-top: 3vh;
-  width: 75vh;
   margin-bottom: 5vh;
   padding: 0;
-  height: 100px;
 }
 
 ::placeholder {
@@ -135,4 +156,84 @@ input[type=number]::-webkit-outer-spin-button {
   text-indent: 10px;
   padding-top: 10px;
   font-size: 17px;
+  font-weight: 600;
+}
+
+.footer-left {
+  padding-top: 15px;
+  margin-left: 20px;
+}
+
+.footer-center {
+  padding-top: 15px;
+  text-align: center;
+}
+
+.footer-divide {
+  padding: 0;
+  padding-top: 15px;
+  text-align: center;
+  color: rgb(137, 137, 137);
+  margin: 0;
+  margin-left: -3%;
+  margin-right: -3%;
+}
+
+.footer-divide2 {
+  padding: 0;
+  padding-top: 15px;
+  text-align: center;
+  color: rgb(137, 137, 137);
+  margin: 0;
+  margin-left: -22%;
+  margin-right: -22%;
+}
+
+.footer-right {
+  padding-top: 15px;
+  text-align: right;
+  color: rgb(137, 137, 137);
+  margin: 0;
+  padding-right: 0;
+  z-index: 0;
+}
+
+.footer-right2 {
+  padding-top: 15px;
+  text-align: left;
+  color: rgb(137, 137, 137);
+  margin: 0;
+  padding-left: 0;
+  z-index: 0;
+}
+
+.footer-wrapper {
+  padding: 20px;
+  padding-bottom: 30px;
+  font-weight: 300;
+}
+
+.title {
+  padding-left: 35px;
+  margin-top: 15px;
+  font-weight: 600;
+  font-size: 36px;
+}
+
+.navbar-brand {
+  /*margin-right: 50px;*/
+  font-weight: 400;
+}
+
+.header-title {
+  font-weight: 600;
+}
+
+.nav-container {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.table {
+  margin-bottom: 0;
 }
